--- a/assets/scss/_reset.scss
+++ b/assets/scss/_reset.scss
@@ -11,20 +11,20 @@ body {
 	-ms-overflow-style: none; /* for Internet Explorer, Edge */
 	scrollbar-width: none; /* for Firefox */
 	overflow-y: scroll; 
-  }
+}
   
-  body::-webkit-scrollbar {
+body::-webkit-scrollbar {
 	display: none; /* for Chrome, Safari, and Opera */
-  }
+}
 // html{
 // 	scroll-behavior: smooth;
 // }
 
-// article, aside, details, figcaption, figure, 
-// footer, header, hgroup, menu, nav, section {
-// 	display: block;
-// 	box-sizing: border-box;
-// }
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	// display: block;
+	box-sizing: border-box;
+}
 
 ol, ul {
 	list-style: none;
