--- a/assets/scss/_variable.scss
+++ b/assets/scss/_variable.scss
@@ -19,7 +19,7 @@ $ff-sanspro: 'Source Sans Pro', sans-serif;
     //font-size
     --fz-title: 36px;
     --fz-main: 24px;
-    --fz-brand: 20px
+    --fz-brand: 20px;
     --fz-name: 18px;
     --fz-text: 16px;
     --fz-filter: 15px;
@@ -29,12 +29,13 @@ $ff-sanspro: 'Source Sans Pro', sans-serif;
     --lh-nav: 22px;
     --lh-title: 130%;
     --lh-ft: 120%;
+    --lh-content: 36px;
     --lh-price: 27px;
     --lh-txt: 24px;
     --lh-btn: 21px;
     --lh-qty: 15px;
     --lh-add: 18px;
-    --lh-brand :42px;
+    --lh-brand:42px;
     //font-weight
     --fw-title: 700;
     --fw-nav: 600;
@@ -50,7 +51,7 @@ $ff-sanspro: 'Source Sans Pro', sans-serif;
         //font-size
         --fz-title: 34px;
         --fz-main: 22px;
-        --fz-brand: 18px
+        --fz-brand: 18px;
         --fz-name: 16px;
         --fz-text: 14px;
         --fz-filter: 13px;
@@ -80,13 +81,45 @@ $ff-sanspro: 'Source Sans Pro', sans-serif;
 @media only screen and (max-width: 920px){
     :root{
         //font-size
-        --fz-title: 32px;
+        --fz-title: 28px;
         --fz-main: 20px;
-        --fz-brand: 16px
+        --fz-brand: 16px;
         --fz-name: 14px;
         --fz-text: 12px;
         --fz-filter: 11px;
         --fz-navbar: 10px;
+        --fz-ft: 8px;
+        //line-height
+        --lh-nav: 18px;
+        --lh-title: 90%;
+        --lh-ft: 80%;
+        --lh-price: 23px;
+        --lh-txt: 20px;
+        --lh-btn: 17px;
+        --lh-qty: 11px;
+        --lh-add: 14px;
+        --lh-brand :38px;
+        //font-weight
+        --fw-title: 700;
+        --fw-nav: 600;
+        --fw-main: 400;
+        --fw-brand: 300;
+        //letter-spacing
+        --lt-1: 0.05em;
+        --lt-2: 0.025em;
+    }
+}
+
+@media only screen and (max-width: 668px){
+    :root{
+        //font-size
+        --fz-title: 24px;
+        --fz-main: 16px;
+        --fz-brand: 14px;
+        --fz-name: 12px;
+        --fz-text: 10px;
+        --fz-filter: 10px;
+        --fz-navbar: 9px;
         --fz-ft: 8px;
         //line-height
         --lh-nav: 18px;
