--- a/assets/scss/_reset.scss
+++ b/assets/scss/_reset.scss
@@ -7,15 +7,15 @@
 	vertical-align: baseline;
 	box-sizing: border-box;
 }
-body {
-	-ms-overflow-style: none; /* for Internet Explorer, Edge */
-	scrollbar-width: none; /* for Firefox */
-	overflow-y: scroll; 
-}
+// body {
+// 	-ms-overflow-style: none; /* for Internet Explorer, Edge */
+// 	scrollbar-width: none; /* for Firefox */
+// 	overflow-y: scroll; 
+// }
   
-body::-webkit-scrollbar {
-	display: none; /* for Chrome, Safari, and Opera */
-}
+// body::-webkit-scrollbar {
+// 	display: none; /* for Chrome, Safari, and Opera */
+// }
 // html{
 // 	scroll-behavior: smooth;
 // }
