--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -8,6 +8,16 @@
   box-sizing: border-box;
 }
 
+body {
+  -ms-overflow-style: none; /* for Internet Explorer, Edge */
+  scrollbar-width: none; /* for Firefox */
+  overflow-y: scroll;
+}
+
+body::-webkit-scrollbar {
+  display: none; /* for Chrome, Safari, and Opera */
+}
+
 article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
   box-sizing: border-box;
